intro to semantics

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -4195,11 +4195,29 @@ semantics gives DOL a rock-solid foundation, and provides increased
 trustworthiness in applications based on OMS written in DOL.  The
 semantics of DOL is moreover the basis for formal interoperability, as
 well as for the meaningful use of logic-based tools for DOL, such as
-theorem provers, model-checkers, SMT solvers etc. These reasons, plus
-the requirement in the OntoIOp RFP, have lead us to include the
-semantics in the standard document proper, even though the semantics
-is quite technical and therefore has a more limited readership than
-the other the chapters of this standard.
+theorem provers, model-checkers, SMT solvers etc.  Last but not least,
+the semantics has provided valuable feedback on the language design,
+and has led to some corrections on the abstract syntax.  These
+reasons, plus the requirement in the OntoIOp RFP to provide a
+semantics, have lead us to include the semantics in the standard
+document proper, even though the semantics is quite technical and
+therefore has a more limited readership than the other the chapters of
+this standard.
+
+The semantics starts with the theoretical foundations. Since DOL is a
+language that can be applied to a variety of logics and logic
+translations, it is based on some heterogeneous logical environment.
+Hence, the most important need is to capture precisely what a
+heterogeneous logical environment is.
+
+The DOL semantics itself gives a formal meaning to libraries, OMS
+network, OMS, OMS mappings, and queries. For each synactic construct,
+a \emph{semantic domain} is given. It specifies the range of possible
+values for the semantics. Additionally, \emph{semantic rules} are
+presented, mapping the abstract syntax to some suitable semantic
+domain.
+
+\sclause{Theoretical foundations of the DOL semantics}
 
 We now specify the theoretical foundations of the semantics of DOL.
 The notions of \emph{institution} and institution 
@@ -4516,7 +4534,7 @@ $\emptyset$ with model class $\cM_\emptyset$. \todonote{require initiality?}
 {\color{blue}
 We assume that for each institution, there exist (possibly partial) union and difference operations on signatures  
 Some of the comorphisms are marked as default translations.
-}
+}\ednote{Till: provide axioms for difference operation}
 
 This concludes the definition of heterogeneous logical environment and the assumptions made about it.
 
