removed superfluous brackets

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -3360,8 +3360,8 @@ Reduction            = 'hidden' , { LogicReduction } , [ SymbolItems ]
                      | 'revealed' , SymbolItems  ;
 LogicReduction       = 'logic-reduction' , OMSLangTrans ;
 
-SymbolItems          = 'symbol-items' , ( Symbol , { Symbol } ) ;
-SymbolMapItems       = 'symbol-map-items' , ( SymbolOrMap , { SymbolOrMap } ) ;
+SymbolItems          = 'symbol-items' , Symbol , { Symbol } ;
+SymbolMapItems       = 'symbol-map-items' , SymbolOrMap , { SymbolOrMap } ;
 
 Extraction           = 'extraction', [ QualInterfaceSignature ] ;
 
