corrected syntax of network-oms-entailment

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -3515,7 +3515,7 @@ NodeMap              = 'node-map', OMSName , OMSName , { LogicTranslation } , [ 
 
 Entailment           = 'entailment' , EntailmentName , EntailmentType ;
 EntailmentType       = 'oms-oms-entailment', OMS , OMS 
-                     | 'network-oms-entailment', Network , OMS 
+                     | 'network-oms-entailment', Network , OMSName , OMS 
                      | 'network-network-entailment', Network, Network ;
 EntailmentName       = IRI ;
 
@@ -4023,7 +4023,7 @@ NodeMap              = OMSName , '|->' , OMSName , [ 'using', { LogicTranslation
 Entailment           = 'entailment' , EntailmentName , '=', EntailmentType ;
 EntailmentName       = IRI ;
 EntailmentType       = GroupOMS , 'entails', OMS
-                     | Network , 'entails', OMS
+                     | OMSName , 'in' , Network , 'entails', OMS
                      | Network , 'entails', Network ;
 
 EquivDefn            = 'equivalence' , EquivName , ':' , EquivType ,  'end' ;
